# napari-crop-and-mask

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
notebooks/: examples.ipynb
scripts/: black.ps1  dev.ps1
src/napari_crop_and_mask/: _crop_widget.py  _mask_widget.py  _widget.py  _widget_utils.py  core.py  models.py  napari.yaml  widget_utils.py
src/napari_crop_and_mask/_tests/: test_widget.py
