[metadata]
name = napari-crop-and-mask

author = Mustafa A. Al Ibrahim
author_email = Mustafa.Geoscientist@outlook.com
url = https://github.com/MosGeo/napari-crop-and-mask
license = MIT
description = A powerful napari plugin for cropping and masking
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
project_urls =
    Bug Tracker = https://github.com/MosGeo/napari-crop-and-mask/issues
    Documentation = https://github.com/MosGeo/napari-crop-and-mask#README.md
    Source Code = https://github.com/MosGeo/napari-crop-and-mask
    User Support = https://github.com/MosGeo/napari-crop-and-mask/issues

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    numpy
    magicgui
    qtpy


[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.packages.find]
where = src

[options.package_data]
* = *.yaml

[options.entry_points]
napari.manifest =
    napari-crop-and-mask = napari_crop_and_mask:napari.yaml
