[metadata]
name = napari_crop_and_mask
description = A powerful napari plugin for cropping and masking
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MosGeo/napari-crop-and-mask
author = Mustafa A. Al Ibrahim
author_email = Mustafa.Geoscientist@outlook.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Testing
project_urls =
    Bug Tracker = https://github.com/MosGeo/napari-crop-and-mask/issues
    Documentation = https://github.com/MosGeo/napari-crop-and-mask#README.md
    Source Code = https://github.com/MosGeo/napari-crop-and-mask
    User Support = https://github.com/MosGeo/napari-crop-and-mask/issues

[options]
packages = find:
install_requires =
    magicgui
    numpy
    qtpy
python_requires = >=3.8
include_package_data = True
package_dir =
    =src
setup_requires =
    setuptools-scm

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-crop-and-mask = napari_crop_and_mask:napari.yaml

[options.extras_require]
testing =
    napari
    pyqt5
    pytest
    pytest-cov
    pytest-qt
    tox

[options.package_data]
* = *.yaml

[flake8]
max-line-length = 120
